--- a/StarStats/Project.toml
+++ b/StarStats/Project.toml
@@ -1,6 +1,18 @@
+name = "StarStats"
+uuid = "3d48db48-6773-11ed-1a7e-43a2532b2fa8"
+authors = ["Pablo Marchant", "Alina Istrate"]
+version = "0.1.0"
+
 [deps]
 CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
 CodecZlib = "944b1d66-785c-5afd-91f1-9de20f533193"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 Interpolations = "a98d9a8b-a2ab-59e6-89dd-64a1c18fca59"
 QuadGK = "1fd47b50-473d-5c70-9696-f719f8f3bcdc"
+
+[compat]
+CSV = "0.10"
+CodecZlib = "0.7"
+DataFrames = "1.4"
+Interpolations = "0.14"
+QuadGK = "2.5"
