--- a/test_notebook/Project.toml
+++ b/test_notebook/Project.toml
@@ -12,5 +12,6 @@ LaTeXStrings = "b964fa9f-0449-5b57-a5c2-d3ea65f4040f"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 ProfileView = "c46f51b8-102a-5cf2-8d2c-8597cb0e0da7"
 QuadGK = "1fd47b50-473d-5c70-9696-f719f8f3bcdc"
+StarStats = "3d48db48-6773-11ed-1a7e-43a2532b2fa8"
 StatsPlots = "f3b207a7-027a-5e70-b257-86293d7955fd"
 Turing = "fce5fe82-541a-59a6-adf8-730c64b5f9a0"
