move corner plot to package

--- a/StarStats/Project.toml
+++ b/StarStats/Project.toml
@@ -12,13 +12,15 @@ Interpolations = "a98d9a8b-a2ab-59e6-89dd-64a1c18fca59"
 Makie = "ee78f7c6-11fb-53f2-987a-cfe4a2b5a57a"
 QuadGK = "1fd47b50-473d-5c70-9696-f719f8f3bcdc"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
+Turing = "fce5fe82-541a-59a6-adf8-730c64b5f9a0"
 
 [compat]
 CSV = "0.10"
-CairoMakie = "0.10"
+CairoMakie = "0.9.0"
 CodecZlib = "0.7"
 DataFrames = "1.4"
 Interpolations = "0.14"
-Makie = "0.19.0"
+Makie = "0.18.0"
 QuadGK = "2.5"
 StatsBase = "0.33"
+Turing = "0.23.0"
