--- a/StarStats/Project.toml
+++ b/StarStats/Project.toml
@@ -1,7 +1,7 @@
 name = "StarStats"
 uuid = "3d48db48-6773-11ed-1a7e-43a2532b2fa8"
 authors = ["Pablo Marchant", "Alina Istrate"]
-version = "0.1.0"
+version = "0.11.0"
 
 [deps]
 CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
@@ -15,6 +15,7 @@ StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 Turing = "fce5fe82-541a-59a6-adf8-730c64b5f9a0"
 
 [compat]
+julia = "1.8.0"
 CSV = "0.10"
 CairoMakie = "0.9.0"
 CodecZlib = "0.7"
