--- a/.github/workflows/CompatHelper.yml
+++ b/.github/workflows/CompatHelper.yml
@@ -6,14 +6,11 @@ on:
 jobs:
   CompatHelper:
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: ./StarStats
     steps:
       - name: Pkg.add("CompatHelper")
-        run: julia -e 'using Pkg; Pkg.add("CompatHelper")'
+        run: cd StarStats;julia -e 'using Pkg; Pkg.add("CompatHelper")'
       - name: CompatHelper.main()
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           COMPATHELPER_PRIV: ${{ secrets.DOCUMENTER_KEY }}
-        run: julia -e 'using CompatHelper; CompatHelper.main()'
+        run: cd StarStats;julia -e 'using CompatHelper; CompatHelper.main()'
