--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -36,42 +36,36 @@ jobs:
           version: ${{ matrix.version }}
           arch: ${{ matrix.arch }}
       - uses: julia-actions/cache@v2
-      - name: Develop and test Makie
-        shell: julia --project=.
-        run: |
-          using Pkg
-          pkg"registry up"
-          Pkg.update()
-          pkg"dev ./StarStats"
-          Pkg.test("StarStats"; coverage=true)
-  #docs:
-  #  name: Documentation
-  #  runs-on: ubuntu-latest
-  #  permissions:
-  #    actions: write # needed to allow julia-actions/cache to proactively delete old caches that it has created
-  #    contents: write
-  #    statuses: write
-  #  steps:
-  #    - uses: actions/checkout@v4
-  #    - uses: julia-actions/setup-julia@v2
-  #      with:
-  #        version: '1'
-  #    - uses: julia-actions/cache@v2
-  #    - name: Configure doc environment
-  #      shell: julia --project=docs --color=yes {0}
-  #      run: |
-  #        using Pkg
-  #        Pkg.develop(PackageSpec(path=pwd()))
-  #        Pkg.instantiate()
-  #    - uses: julia-actions/julia-buildpkg@v1
-  #    - uses: julia-actions/julia-docdeploy@v1
-  #      env:
-  #        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-  #        DOCUMENTER_KEY: ${{ secrets.DOCUMENTER_KEY }}
-  #    - name: Run doctests
-  #      shell: julia --project=docs --color=yes {0}
-  #      run: |
-  #        using Documenter: DocMeta, doctest
-  #        using StarStats
-  #        DocMeta.setdocmeta!(StarStats, :DocTestSetup, :(using StarStats); recursive=true)
-  #        doctest(StarStats)
+      - uses: julia-actions/julia-buildpkg@v1
+      - uses: julia-actions/julia-runtest@v1
+#  docs:
+#    name: Documentation
+#    runs-on: ubuntu-latest
+#    permissions:
+#      actions: write # needed to allow julia-actions/cache to proactively delete old caches that it has created
+#      contents: write
+#      statuses: write
+#    steps:
+#      - uses: actions/checkout@v4
+#      - uses: julia-actions/setup-julia@v2
+#        with:
+#          version: '1'
+#      - uses: julia-actions/cache@v2
+#      - name: Configure doc environment
+#        shell: julia --project=docs --color=yes {0}
+#        run: |
+#          using Pkg
+#          Pkg.develop(PackageSpec(path=pwd()))
+#          Pkg.instantiate()
+#      - uses: julia-actions/julia-buildpkg@v1
+#      - uses: julia-actions/julia-docdeploy@v1
+#        env:
+#          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#          DOCUMENTER_KEY: ${{ secrets.DOCUMENTER_KEY }}
+#      - name: Run doctests
+#        shell: julia --project=docs --color=yes {0}
+#        run: |
+#          using Documenter: DocMeta, doctest
+#          using CornerPlotting
+#          DocMeta.setdocmeta!(CornerPlotting, :DocTestSetup, :(using CornerPlotting); recursive=true)
+#          doctest(CornerPlotting)
