--- a/Project.toml
+++ b/Project.toml
@@ -17,3 +17,9 @@ Interpolations = "0.14"
 QuadGK = "2.5"
 Turing = "0.35"
 julia = "1.8"
+
+[extras]
+Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+
+[targets]
+test = ["Test"]
