--- a/Project.toml
+++ b/Project.toml
@@ -13,7 +13,7 @@ Turing = "fce5fe82-541a-59a6-adf8-730c64b5f9a0"
 [compat]
 CSV = "0.10"
 DataFrames = "1.4"
-Interpolations = "0.14"
+Interpolations = "0.14, 0.15"
 QuadGK = "2.5"
 Turing = "0.35"
 julia = "1.8"
