--- a/Project.toml
+++ b/Project.toml
@@ -15,7 +15,7 @@ CSV = "0.10"
 DataFrames = "1.4"
 Interpolations = "0.14, 0.15"
 QuadGK = "2.5"
-Turing = "0.35"
+Turing = "0.35, 0.36"
 julia = "1.8"
 
 [extras]
