--- a/Project.toml
+++ b/Project.toml
@@ -8,8 +8,11 @@ CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 FTPClient = "01fcc997-4f28-56b8-8a06-30002c134abb"
 Interpolations = "a98d9a8b-a2ab-59e6-89dd-64a1c18fca59"
+LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 QuadGK = "1fd47b50-473d-5c70-9696-f719f8f3bcdc"
 Quickhull = "baca2653-9c88-49d2-a488-12dbf25fc4fb"
+StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
+StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 Turing = "fce5fe82-541a-59a6-adf8-730c64b5f9a0"
 
 [compat]
@@ -17,8 +20,11 @@ CSV = "0.10"
 DataFrames = "1.4"
 FTPClient = "1.2.1"
 Interpolations = "0.14, 0.15"
+LinearAlgebra = "1.11.0"
 QuadGK = "2.5"
 Quickhull = "0.2.1"
+StaticArrays = "1.9.13"
+StatsBase = "0.34.5"
 Turing = "0.35, 0.36"
 julia = "1.8"
 
