--- a/examples/Project.toml
+++ b/examples/Project.toml
@@ -1,5 +1,8 @@
 [deps]
+BenchmarkTools = "6e4b80f9-dd63-53aa-95a3-0cdb28fa8baf"
+CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
 CairoMakie = "13f3f980-e62b-5c42-98c6-ff1f3baf88f0"
+DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 LaTeXStrings = "b964fa9f-0449-5b57-a5c2-d3ea65f4040f"
 Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
 StarStats = "3d48db48-6773-11ed-1a7e-43a2532b2fa8"
