--- a/Project.toml
+++ b/Project.toml
@@ -5,6 +5,7 @@ version = "0.13.0"
 
 [deps]
 CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
+CairoMakie = "13f3f980-e62b-5c42-98c6-ff1f3baf88f0"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 FTPClient = "01fcc997-4f28-56b8-8a06-30002c134abb"
 Interpolations = "a98d9a8b-a2ab-59e6-89dd-64a1c18fca59"
@@ -17,6 +18,7 @@ Turing = "fce5fe82-541a-59a6-adf8-730c64b5f9a0"
 
 [compat]
 CSV = "0.10"
+CairoMakie = "0.12, 0.13"
 DataFrames = "1.4"
 FTPClient = "1.2.1"
 Interpolations = "0.14, 0.15"
